# MandelbrotSet

./: CMakeLists.txt  README.md  main.c  mandelbrot.ppm
